[package]
name = "repl_o_bot"
version = "0.1.0"
authors = ["aspirational <t.me/aspirational>"]
edition = "2021"

[dependencies]
tokio-tungstenite = {version = "*", features = ["native-tls"]}
url = "2.2.2"
teloxide = { version = "0.5.3", features = ["macros", "auto-send"] }
log = "0.4"
pretty_env_logger = "0.4.0"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }